@@ -393,6 +393,13 @@ the minibuffer was activated, and execute the forms."
      (with-selected-window window
        ,@body)))
 
+;;;; Defined in byte-run.el
+
+(defmacro with-suppressed-warnings (_warnings &rest body) ;; <compat-tests:with-suppressed-warnings>
+  "Like `progn', but prevents compiler WARNINGS in BODY.
+NOTE: The compatibility version behaves like `with-no-warnings'."
+  `(with-no-warnings ,@body))
+
 ;;;; Defined in image.el
 
 (compat-defun image--set-property (image property value) ;; <compat-tests:image-property>
