@@ -2,6 +2,7 @@
 
 * Development
 
+- compat-27: Add ~with-suppressed-warnings~.
 - compat-29: Add ~cl-with-gensyms~ and ~cl-once-only~.
 
 * Release of "Compat" Version 29.1.3.2
